# SQL-LLM-Distillation-GRPO

./: .dockerignore  .gitignore  Dockerfile  README.md  chat.py  config.yaml  docker-compose.yaml  entrypoint.sh  logging_.py  main.py  pyproject.toml  template.config.yaml  template.env  template.prod
config/: __init__.py  environment.py
control/: __init__.py  distill_control.py  trainer_control.py
distill/: __init__.py  _distilabel.py
dockers/: distill.Dockerfile  jupyter.Dockerfile  train.Dockerfile  train_sm_86.Dockerfile
notebooks/: distillation.ipynb  supervised-fine-tuning-GRPO.ipynb  supervised-fine-tuning.ipynb  training-unsloth-CoT-GRPO.ipynb
prompt_engineering/: __init__.py  template.py
rewards/: __init__.py  format_reward.py  sql_reward.py
schemas/: __init__.py  config.py
test/: test_cuda.py  test_ray.py
utils/: __init__.py  constraints.py  formatting.py  hf_config.py  parser.py  validation.py
