[project]
name = "sql-rl-distillation-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "distilabel[ray]>=1.5.3",
    "duckdb>=1.2.2",
    "loguru>=0.7.3",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "transformers==4.51.3",
    "trl>=0.17.0",
    "unsloth>=2025.3.3",
]
